[project]
name = "pure-interface"
version = "8.0.3"
description = "A Python interface library that disallows function body content on interfaces and supports adaption."
keywords = ["interface", "protocol", "adaption", "structural", "dataclass"]
authors = [
    {name = "Tim Mitchell", email = "tim.mitchell@seequent.com"}
]
readme = "README.rst"
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
license = {file = "LICENSE"}

[project.urls]
Homepage = "https://pypi.org/project/pure-interface/"
Repository = "https://github.com/seequent/pure_interface"

[project.optional-dependencies]
dev = ['mypy >= 1.4', 'tox']
typing = ['mypy']

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.mypy]
plugins = "pure_interface/mypy_plugin.py"

[tool.black]
line-length = 120

[tool.isort]
profile = "black"

[tool.bumpversion]
current_version = "8.0.3"
parse = "(?P<major>\\d+)\\.(?P<minor>\\d+)\\.(?P<patch>\\d+)"
serialize = ["{major}.{minor}.{patch}"]
search = "{current_version}"
replace = "{new_version}"
regex = false
ignore_missing_version = false
ignore_missing_files = false
tag = true
sign_tags = false
tag_name = "v{new_version}"
tag_message = "Bump version: {current_version} → {new_version}"
allow_dirty = false
commit = true
message = "Bump version: {current_version} → {new_version}"
setup_hooks = []
pre_commit_hooks = []
post_commit_hooks = []

[[tool.bumpversion.files]]
filename = "pyproject.toml"
search = 'version = "{current_version}"'
replace = 'version = "{new_version}"'

[[tool.bumpversion.files]]
filename = "pure_interface/__init__.py"
search = '__version__ = "{current_version}"'
replace = '__version__ = "{new_version}"'
