[metadata]
name = pure_interface
version = 7.0.0
description = A Python interface library that disallows function body content on interfaces and supports adaption.
keywords = abc interface adapt adaption mapper structural typing dataclass
author = Tim Mitchell
author_email = tim.mitchell@seequent.com
url = https://github.com/seequent/pure_interface
download_url = https://pypi.org/project/pure-interface/
long_description = file: README.rst
long_description_content_type = text/markdown
python_requires = >=3.7
classifiers = 
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Topic :: Software Development :: Libraries
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
license = MIT
license_files = LICENSE

[options]
packages = find:

[options.packages.find]
where = .
include = pure_interface
